--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react": "^19.1.0",
     "react-bootstrap": "2.10.10",
     "react-dom": "^19.1.0",
+    "react-paginate": "^8.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "sass": "1.89.0",
     "web-vitals": "^2.1.4"
   },
