--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "0.26.1",
     "bootstrap": "5.1.3",
     "lodash": "^4.17.21",
+    "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-bootstrap": "2.10.10",
+    "react-csv": "^2.2.2",
     "react-dom": "^19.1.0",
     "react-paginate": "^8.3.0",
     "react-scripts": "5.0.1",
