--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "^19.1.0",
     "react-paginate": "^8.3.0",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "sass": "1.89.0",
