--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "0.26.1",
-    "bootstrap": "5.1.3",
+    "bootstrap": "^5.3.6",
     "lodash": "^4.17.21",
     "papaparse": "^5.5.3",
     "react": "^19.1.0",
@@ -46,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4"
   }
 }
